finished the variation of angles

--- a/DesignUnitTest.ipynb
+++ b/DesignUnitTest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -61,14 +61,14 @@
        "|              |        0 |        1 |        2 |        3 |        4 |\n",
        "|:-------------|---------:|---------:|---------:|---------:|---------:|\n",
        "| $\\lambda$    |   0.98   |   0.9131 |   0.8725 |   0.8479 |   0.833  |\n",
-       "| $\\Lambda$    |   0.6    |   0.5287 |   0.5082 |   0.5024 |   0.5007 |\n",
+       "| $\\Lambda$    |   0.5    |   0.3573 |   0.3164 |   0.3047 |   0.3013 |\n",
        "| $ \\beta_1 $  |  59.132  |  57.599  |  56.803  |  56.126  |  55.616  |\n",
-       "| $ \\beta_2 $  |  98.309  |  95.437  |  97.358  | 100.225  | 102.611  |\n",
-       "| $ \\alpha_1 $ |   3.2    |  13.491  |  18.08   |  20.639  |  22.181  |\n",
-       "| $ \\alpha_2 $ |  47.412  |  51.233  |  52.809  |  53.597  |  54.04   |\n",
-       "| $C_{w1}$     |   9.513  |  40.818  |  55.542  |  64.079  |  69.363  |\n",
-       "| $C_{w2}$     | 185.096  | 211.851  | 224.21   | 230.736  | 234.506  |\n",
-       "| de Haller    |   1.4754 |   1.553  |   1.5726 |   1.5769 |   1.5769 |\n",
+       "| $ \\beta_2 $  |  81.924  |  64.503  |  60.616  |  60.792  |  61.76   |\n",
+       "| $ \\alpha_1 $ |  11.249  |  27.015  |  32.907  |  35.783  |  37.387  |\n",
+       "| $ \\alpha_2 $ |  50.91   |  56.575  |  58.604  |  59.539  |  60.04   |\n",
+       "| $C_{w1}$     |  33.839  |  86.744  | 110.091  | 122.625  | 130.014  |\n",
+       "| $C_{w2}$     | 209.422  | 257.777  | 278.76   | 289.281  | 295.157  |\n",
+       "| de Haller    |   1.5555 |   1.6173 |   1.6116 |   1.6003 |   1.5911 |\n",
        "| $P_{0S}$     |   1.5476 |   2.2468 |   3.1345 |   4.2343 |   5.5705 |\n",
        "| $T_{0S}$     | 329.8    | 371.45   | 413.1    | 454.75   | 496.4    |"
       ],
@@ -81,8 +81,7 @@
     }
    ],
    "source": [
-    "from VelocityTriangles import velocity_triangles_table\n",
-    "from pylatex import NoEscape\n",
+    "from MeanVelocityTriangles import velocity_triangles_table\n",
     "from IPython.display import Markdown\n",
     "pd.options.display.html.use_mathjax = True\n",
     "velocity_triangles_df = pd.DataFrame(velocity_triangles_table)\n",
