--- a/DesignUnitTest.ipynb
+++ b/DesignUnitTest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -61,14 +61,14 @@
        "|              |        0 |        1 |        2 |        3 |        4 |\n",
        "|:-------------|---------:|---------:|---------:|---------:|---------:|\n",
        "| $\\lambda$    |   0.98   |   0.9131 |   0.8725 |   0.8479 |   0.833  |\n",
-       "| $\\Lambda$    |   0.5    |   0.3573 |   0.3164 |   0.3047 |   0.3013 |\n",
+       "| $\\Lambda$    |   0.639  |   0.4685 |   0.4196 |   0.4056 |   0.4016 |\n",
        "| $ \\beta_1 $  |  59.132  |  57.599  |  56.803  |  56.126  |  55.616  |\n",
-       "| $ \\beta_2 $  |  81.924  |  64.503  |  60.616  |  60.792  |  61.76   |\n",
-       "| $ \\alpha_1 $ |  11.249  |  27.015  |  32.907  |  35.783  |  37.387  |\n",
-       "| $ \\alpha_2 $ |  50.91   |  56.575  |  58.604  |  59.539  |  60.04   |\n",
-       "| $C_{w1}$     |  33.839  |  86.744  | 110.091  | 122.625  | 130.014  |\n",
-       "| $C_{w2}$     | 209.422  | 257.777  | 278.76   | 289.281  | 295.157  |\n",
-       "| de Haller    |   1.5555 |   1.6173 |   1.6116 |   1.6003 |   1.5911 |\n",
+       "| $ \\beta_2 $  | 104.699  |  84.573  |  80.387  |  80.926  |  82.309  |\n",
+       "| $ \\alpha_1 $ |   0.009  |  18.506  |  25.387  |  28.593  |  30.322  |\n",
+       "| $ \\alpha_2 $ |  45.908  |  53.268  |  55.7    |  56.739  |  57.265  |\n",
+       "| $C_{w1}$     |   0.026  |  56.947  |  80.739  |  92.732  |  99.506  |\n",
+       "| $C_{w2}$     | 175.609  | 227.979  | 249.407  | 259.389  | 264.649  |\n",
+       "| de Haller    |   1.4372 |   1.5856 |   1.6032 |   1.601  |   1.5963 |\n",
        "| $P_{0S}$     |   1.5476 |   2.2468 |   3.1345 |   4.2343 |   5.5705 |\n",
        "| $T_{0S}$     | 329.8    | 371.45   | 413.1    | 454.75   | 496.4    |"
       ],
@@ -91,7 +91,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "design-env",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -105,7 +105,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
