--- a/DesignUnitTest.ipynb
+++ b/DesignUnitTest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -30,12 +30,13 @@
     "from IPython.display import Markdown\n",
     "import numpy as np\n",
     "from AnnulusDimension import annulus_dimensions\n",
-    "display(Markdown(pd.DataFrame.from_dict(annulus_dimensions,orient='index').to_markdown()))"
+    "display(Markdown(pd.DataFrame.from_dict(annulus_dimensions,orient='index').to_markdown()))\n",
+    "table_1 = pd.DataFrame.from_dict(annulus_dimensions,orient='index').to_markdown()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -52,25 +53,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "|              |        0 |        1 |        2 |        3 |        4 |\n",
-       "|:-------------|---------:|---------:|---------:|---------:|---------:|\n",
-       "| $\\lambda$    |   0.98   |   0.9131 |   0.8725 |   0.8479 |   0.833  |\n",
-       "| $\\Lambda$    |   0.639  |   0.4685 |   0.4196 |   0.4056 |   0.4016 |\n",
-       "| $ \\beta_1 $  |  59.132  |  57.599  |  56.803  |  56.126  |  55.616  |\n",
-       "| $ \\beta_2 $  | 104.699  |  84.573  |  80.387  |  80.926  |  82.309  |\n",
-       "| $ \\alpha_1 $ |   0.009  |  18.506  |  25.387  |  28.593  |  30.322  |\n",
-       "| $ \\alpha_2 $ |  45.908  |  53.268  |  55.7    |  56.739  |  57.265  |\n",
-       "| $C_{w1}$     |   0.026  |  56.947  |  80.739  |  92.732  |  99.506  |\n",
-       "| $C_{w2}$     | 175.609  | 227.979  | 249.407  | 259.389  | 264.649  |\n",
-       "| de Haller    |   1.4372 |   1.5856 |   1.6032 |   1.601  |   1.5963 |\n",
-       "| $P_{0S}$     |   1.5476 |   2.2468 |   3.1345 |   4.2343 |   5.5705 |\n",
-       "| $T_{0S}$     | 329.8    | 371.45   | 413.1    | 454.75   | 496.4    |"
+       "|    |   $\\lambda$ |   $\\Lambda$ |   $ \\beta_1 $ |   $ \\beta_2 $ |   $ \\alpha_1 $ |   $ \\alpha_2 $ |   $C_{w1}$ |   $C_{w2}$ |   de Haller |   $P_{0S}$ |   $T_{0S}$ |\n",
+       "|---:|------------:|------------:|--------------:|--------------:|---------------:|---------------:|-----------:|-----------:|------------:|-----------:|-----------:|\n",
+       "|  0 |      0.98   |      0.639  |        59.132 |       104.699 |          0.009 |         45.908 |      0.026 |    175.609 |      1.4372 |     1.5476 |     329.8  |\n",
+       "|  1 |      0.9131 |      0.4685 |        57.599 |        84.573 |         18.506 |         53.268 |     56.947 |    227.979 |      1.5856 |     2.2468 |     371.45 |\n",
+       "|  2 |      0.8725 |      0.4196 |        56.803 |        80.387 |         25.387 |         55.7   |     80.739 |    249.407 |      1.6032 |     3.1345 |     413.1  |\n",
+       "|  3 |      0.8479 |      0.4056 |        56.126 |        80.926 |         28.593 |         56.739 |     92.732 |    259.389 |      1.601  |     4.2343 |     454.75 |\n",
+       "|  4 |      0.833  |      0.4016 |        55.616 |        82.309 |         30.322 |         57.265 |     99.506 |    264.649 |      1.5963 |     5.5705 |     496.4  |"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -85,13 +80,26 @@
     "from IPython.display import Markdown\n",
     "pd.options.display.html.use_mathjax = True\n",
     "velocity_triangles_df = pd.DataFrame(velocity_triangles_table)\n",
-    "display(Markdown(velocity_triangles_df.T.to_markdown(index=True)))"
+    "display(Markdown(velocity_triangles_df.to_markdown(index=True)))\n",
+    "table_2 =velocity_triangles_df.to_markdown(index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('appendix\\markdown-tables','w') as file:\n",
+    "  file.write(table_1)\n",
+    "  file.write('\\n\\n')\n",
+    "  file.write(table_2)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "design-env",
    "language": "python",
    "name": "python3"
   },
@@ -105,7 +113,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
