--- a/DesignUnitTest.ipynb
+++ b/DesignUnitTest.ipynb
@@ -99,7 +99,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "design-env",
+   "display_name": "design_env",
    "language": "python",
    "name": "python3"
   },
@@ -113,7 +113,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
