I am out of time

--- a/DesignUnitTest.ipynb
+++ b/DesignUnitTest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -26,17 +26,19 @@
     }
    ],
    "source": [
+    "import numpy as np\n",
     "import pandas as pd\n",
     "from IPython.display import Markdown\n",
-    "import numpy as np\n",
+    "\n",
     "from AnnulusDimension import annulus_dimensions\n",
+    "\n",
     "display(Markdown(pd.DataFrame.from_dict(annulus_dimensions,orient='index').to_markdown()))\n",
     "table_1 = pd.DataFrame.from_dict(annulus_dimensions,orient='index').to_markdown()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -76,8 +78,10 @@
     }
    ],
    "source": [
-    "from MeanVelocityTriangles import velocity_triangles_table\n",
     "from IPython.display import Markdown\n",
+    "\n",
+    "from MeanVelocityTriangles import velocity_triangles_table\n",
+    "\n",
     "pd.options.display.html.use_mathjax = True\n",
     "velocity_triangles_df = pd.DataFrame(velocity_triangles_table)\n",
     "display(Markdown(velocity_triangles_df.to_markdown(index=True)))\n",
@@ -86,14 +90,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "|                         |              0 |              1 |              2 |\n",
+       "|:------------------------|---------------:|---------------:|---------------:|\n",
+       "| stagnation_pressures    | 481294         | 481294         | 222821         |\n",
+       "| pressures               | 428378         | 308118         | 112019         |\n",
+       "| stagnation_temperatures |   1173         |   1173         |   1023         |\n",
+       "| temperatures            |   1139.36      |   1049.33      |    987.842     |\n",
+       "| densities               |      1.31004   |      1.02311   |      0.699526  |\n",
+       "| area                    |      0.0222401 |      0.0284771 |      0.0416501 |\n",
+       "| heights                 |      0.0273588 |      0.0350314 |      0.0512363 |\n",
+       "| radius_ratio            |      1.23647   |      1.31317   |      1.4938    |"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from TurbineAnnulus import turbine_annulus_dict\n",
+    "\n",
+    "display(Markdown(pd.DataFrame.from_dict(turbine_annulus_dict,orient='index').to_markdown()))\n",
+    "table_3 =pd.DataFrame.from_dict(turbine_annulus_dict,orient='index').to_markdown()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "|           |       0 |        1 |        2 |\n",
+       "|:----------|--------:|---------:|---------:|\n",
+       "| $\\psi$    | 2.8539  | nan      | nan      |\n",
+       "| $\\Lambda$ | 0.45657 | nan      | nan      |\n",
+       "| $\\alpha$  | 0       |  57.5239 |  12      |\n",
+       "| $\\beta$   | 0       |  17.8035 |  55.6382 |"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "\n",
+    "from MeanTurbineAngles import velocity_angles_dict\n",
+    "\n",
+    "display(Markdown(pd.DataFrame.from_dict(velocity_angles_dict,orient='index').to_markdown()))\n",
+    "table_4 =pd.DataFrame.from_dict(velocity_angles_dict,orient='index').to_markdown()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('appendix\\markdown-tables','w') as file:\n",
+    "\n",
+    "with open('appendix\\\\markdown-tables','w') as file:\n",
     "  file.write(table_1)\n",
     "  file.write('\\n\\n')\n",
-    "  file.write(table_2)"
+    "  file.write(table_2)\n",
+    "  file.write('\\n\\n')\n",
+    "  file.write(table_3)\n",
+    "  file.write('\\n\\n')\n",
+    "  file.write(table_4)"
    ]
   }
  ],
